<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/bookInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/bookPositionWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".75"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookPositionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/book_borrow_history_position_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(0)"
                android:textColor="@color/black"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookShelfWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".75"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookShelfLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/book_borrow_history_shelf_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookShelf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(0)"
                android:textColor="@color/black"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookStatusWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/book_borrow_history_status_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(book_status)"
                android:textColor="@color/black"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bookHistoryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/book_borrow_history_header_label"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookInfo" />

    <TextView
        android:id="@+id/bookHistoryBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="(book_name)"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookHistoryHeader"
        tools:ignore="HardcodedText" />

    <ScrollView
        android:id="@+id/historyScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookHistoryBookName">

        <LinearLayout
            android:id="@+id/borrowHistoryContentWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TableLayout
                android:id="@+id/borrowHistoryWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_content_wrapper"
                android:padding="11dp"
                android:visibility="gone"
                tools:ignore="UselessParent">

                <TableRow
                    android:id="@+id/readerInfoWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/readerLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/book_borrow_history_reader_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/readerFullName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="(reader_full_name)"
                        android:textColor="@color/text_action"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                </TableRow>

                <TableRow
                    android:id="@+id/returnDateWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/returnDateLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/book_borrow_history_return_date_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/returnDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="(1970-01-01)"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:id="@+id/borrowDateWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/borrowDateLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/book_borrow_history_borrow_date_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/borrowDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="(1970-01-01)"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:id="@+id/plannedReturnDateWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="0dp">

                    <TextView
                        android:id="@+id/plannedReturnDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/book_borrow_history_planned_return_date_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/borrowHistoryplannedReturnDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="(1970-01-01)"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/noBookHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_borrow_history_no_history"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookHistoryBookName" />
</androidx.constraintlayout.widget.ConstraintLayout>